# simple-sqlite-bench-rs

./: .gitignore  Cargo.toml  README.md  benchmark.sh  benchmark_output.txt
src/: errors.rs  main.rs
