[package]
name = "simple-sqlite-bench-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "=0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
uuid = { version= "1", features = ["v4"] }